# store

./: .gitignore  pyproject.toml
likes/: models.py
likes/migrations/: 0001_initial.py
playground/: views.py
playground/templates/: hello.html
store/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_remove_product_price_product_slug_product_unit_price_and_more.py  0003_alter_collection_options_alter_customer_options_and_more.py  0004_alter_orderitem_product_alter_product_collection_and_more.py  0005_review.py
store_custom/: admin.py
storefront/: settings.py  urls.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
