[tool.poetry]
name = "store-front"
version = "0.1.0"
description = ""
authors = ["ahmedelgamal0 <a.elgamal98@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.2"
django-debug-toolbar = "^4.3.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
